✅ Removes H2 as extra dependencies

--- a/concert-demos-rest-service-mvc/src/main/resources/application-test.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-test.properties
@@ -1,1 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:///${postgres.database}?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
