--- a/concert-demos-rest-service-webflux/pom.xml
+++ b/concert-demos-rest-service-webflux/pom.xml
@@ -23,12 +23,12 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-r2dbc</artifactId>
-            <version>1.3.2</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-relational</artifactId>
-            <version>2.2.2</version>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
@@ -127,6 +127,10 @@
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-h2</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-spi</artifactId>
         </dependency>
     </dependencies>
 
