--- a/.github/workflows/concert-demos-root-pull-request.yml
+++ b/.github/workflows/concert-demos-root-pull-request.yml
@@ -4,7 +4,7 @@
 name: concert-demos-root
 
 on:
-  push:
+  pull_request:
     branches: [ master ]
 
 jobs:
@@ -22,10 +22,3 @@ jobs:
 
     - name: Build and Test
       run:  mvn clean install jacoco:prepare-agent package jacoco:report
-
-    - name: Coverage Reports
-      run: mvn omni-coveragereporter:report
-      env:
-         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-         CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
