--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.2</version>
-    </parent>
 
     <groupId>org.jesperancinha.concerts</groupId>
     <artifactId>concert-demos-root</artifactId>
@@ -25,6 +20,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <kotlin.version>1.6.10</kotlin.version>
         <kotlin-logging.version>1.12.5</kotlin-logging.version>
+        <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
 
         <!-- Spring -->
         <spring-boot-bom-r2dbc.version>0.1.0.M3</spring-boot-bom-r2dbc.version>
@@ -37,7 +33,7 @@
         <kotest.version>5.0.3</kotest.version>
         <springmockk.version>3.1.0</springmockk.version>
         <kotest-extensions-spring.version>1.0.0</kotest-extensions-spring.version>
-        <mockk.version>1.12.0</mockk.version>
+        <mockk.version>1.12.2</mockk.version>
 
         <!-- Assetions -->
         <assertj-core.version>3.15.0</assertj-core.version>
@@ -47,9 +43,8 @@
 
         <!-- Coverage -->
         <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-        <spring-boot-starter-data-r2dbc.version>2.5.3</spring-boot-starter-data-r2dbc.version>
         <omni-coveragereporter-maven-plugin.version>0.0.10</omni-coveragereporter-maven-plugin.version>
+        <spring-boot.version>2.6.2</spring-boot.version>
     </properties>
 
     <modules>
@@ -60,11 +55,12 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-r2dbc -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-r2dbc</artifactId>
-                <version>${spring-boot-starter-data-r2dbc.version}</version>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.spockframework</groupId>
@@ -243,6 +239,13 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
