--- a/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:postgresql://${postgres.host}/${postgres.database}
+spring.datasource.url=jdbc:postgresql://${postgres.host:localhost}/${postgres.database}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
