--- a/concert-demos-rest-service-webflux/Dockerfile
+++ b/concert-demos-rest-service-webflux/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR ${runningFolder}
 
 RUN apt-get update
 
-COPY target/concert-demos-rest-service-webflux-*.jar ${runningFolder}/concert-demos-rest-service-webflux.jar
+COPY target/concert-demos-rest-service-webflux.jar ${runningFolder}/concert-demos-rest-service-webflux.jar
 
 COPY entrypoint.sh ${runningFolder}
 
