--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,10 @@ services:
     hostname: postgres
     build:
       context: ./docker-psql/.
-    env_file:
-      - ./docker-psql/.env
+    env_file: ./docker-psql/.env
+    user: postgres
     volumes:
       - ./docker-psql/init-scripts:/docker-entrypoint-initdb.d
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_MULTIPLE_DATABASES=concertsdbmvc,concertsdbwebflux
     ports:
       - "5432:5432"
 
