--- a/docker-psql/.env
+++ b/docker-psql/.env
@@ -1,2 +1,4 @@
-DB_USER=postgres
-DB_PASSWORD=admin
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_MULTIPLE_DATABASES=concertsdbmvc,concertsdbwebflux
