--- a/concert-demos-rest-service-mvc/Dockerfile
+++ b/concert-demos-rest-service-mvc/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR ${runningFolder}
 
 RUN apt-get update
 
-COPY target/concert-demos-rest-service-mvc-*.jar ${runningFolder}/concert-demos-rest-service-mvc.jar
+COPY target/concert-demos-rest-service-mvc.jar ${runningFolder}/concert-demos-rest-service-mvc.jar
 
 COPY entrypoint.sh ${runningFolder}
 
