--- a/concert-demos-rest-service-mvc/pom.xml
+++ b/concert-demos-rest-service-mvc/pom.xml
@@ -52,7 +52,6 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.9</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -144,6 +143,7 @@
     </dependencies>
 
     <build>
+        <finalName>${artifactId}</finalName>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
@@ -220,7 +220,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>org.jesperancinha.concerts.mvc.ConcertDemosMvcApplication</mainClass>
+                    <mainClass>org.jesperancinha.concerts.mvc.ConcertDemosMvcApplicationKt</mainClass>
                 </configuration>
                 <executions>
                     <execution>
