Dependabot NPM updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,4 +22,7 @@ updates:
     directory: "/concert-demos-gui"
     schedule:
       interval: "daily"
-
+  - package-ecosystem: "npm"
+    directory: "/e2e"
+    schedule:
+      interval: "daily"
