Cypress annotation update

--- a/concert-demos-rest-service-mvc/src/main/resources/application.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 postgres.database=concertsdbmvc
+concerts.server.url=http://localhost:${server.port}
