--- a/concert-demos-rest-service-webflux/src/main/resources/application.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.r2dbc.username=postgres
 spring.r2dbc.password=admin
 spring.r2dbc.initialization-mode=always
 postgres.database=concertsdbwebflux
+concerts.server.url=http://localhost:${server.port}
