--- a/.github/workflows/concert-demos-root-e2e.yml
+++ b/.github/workflows/concert-demos-root-e2e.yml
@@ -3,6 +3,8 @@ name: concert-demos-root-e2e
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   e2e-electron:
