--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <kotlinx-coroutines.version>1.6.3-native-mt</kotlinx-coroutines.version>
         <springdoc-openapi.version>1.6.13</springdoc-openapi.version>
         <kotlinx-coroutines-debug.version>1.6.4</kotlinx-coroutines-debug.version>
+        <springdoc-openapi-starter.version>2.0.0</springdoc-openapi-starter.version>
     </properties>
 
     <modules>
@@ -63,13 +64,13 @@
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>${springdoc-openapi.version}</version>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc-openapi-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-webflux-ui</artifactId>
-                <version>${springdoc-openapi.version}</version>
+                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+                <version>${springdoc-openapi-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.assertj</groupId>
