--- a/.github/workflows/concert-demos-root-e2e.yml
+++ b/.github/workflows/concert-demos-root-e2e.yml
@@ -18,7 +18,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Start Docker
-        run: make dcup-full-action
+        uses: nick-fields/retry@v2
+        with:
+          max_attempts: 4
+          retry_on: error
+          timeout_seconds: 2400
+          command: |
+            make dcup-full-action
 
       - name: Run Cypress
         run: make cypress-electron
@@ -34,7 +40,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Start Docker
-        run: make dcup-full-action
+        uses: nick-fields/retry@v2
+        with:
+          max_attempts: 4
+          retry_on: error
+          timeout_seconds: 2400
+          command: |
+            make dcup-full-action
 
       - name: Run Cypress
         run: make cypress-chrome
@@ -50,7 +62,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Start Docker
-        run: make dcup-full-action
+        uses: nick-fields/retry@v2
+        with:
+          max_attempts: 4
+          retry_on: error
+          timeout_seconds: 2400
+          command: |
+            make dcup-full-action
 
       - name: Run Cypress
         run: make cypress-firefox
@@ -66,7 +84,13 @@ jobs:
           distribution: 'adopt'
 
       - name: Start Docker
-        run: make dcup-full-action
+        uses: nick-fields/retry@v2
+        with:
+          max_attempts: 4
+          retry_on: error
+          timeout_seconds: 2400
+          command: |
+            make dcup-full-action
 
       - name: Run Cypress
         run: make cypress-edge
