--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -1,5 +1,5 @@
 cypress-open:
-	yarn && npm run cypress
+	yarn && npm run cypress:open:electron
 cypress-electron:
 	yarn && docker-compose -f ../docker-compose.yml -f docker-compose.yml up --exit-code-from e2e-electron e2e-electron
 cypress-chrome:
