--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "cypress": "npx cypress open --browser electron",
+    "cypress:open:electron": "npx cypress open --browser electron",
     "cypress:run:electron": "npx cypress run --browser electron",
     "cypress:run:chrome": "npx cypress run --browser chrome",
     "cypress:run:firefox": "npx cypress run --browser firefox",
@@ -21,7 +21,7 @@
   "author": "João Esperancinha",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.0.0",
+    "cypress": "13.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
