Collapses Artist implementation and interface

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       - ./docker-psql/init-scripts:/docker-entrypoint-initdb.d
     networks:
       - concerts
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mvc:
     hostname: mvc
@@ -21,6 +26,9 @@ services:
       - concerts
     expose:
       - 8080
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   webflux:
     hostname: webflux
@@ -32,6 +40,9 @@ services:
       - concerts
     expose:
       - 8081
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 networks:
   concerts:
