--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,3 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
   - package-ecosystem: "maven" # See documentation for possible values
@@ -17,11 +12,17 @@ updates:
       - dependency-name: "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm"
         versions: ["1.6.0-RC2", "1.6.0-RC3", "1.6.0"]
 
-  # Configuration for npm
   - package-ecosystem: "npm"
     directory: "/concert-demos-gui"
     schedule:
       interval: "daily"
+    groups:
+      angular:
+        patterns:
+          - "@angular*"
+          - "angular*"
+          - "*angular*"
+
   - package-ecosystem: "npm"
     directory: "/e2e"
     schedule:
