--- a/.github/workflows/concert-demos-root-pull-request.yml
+++ b/.github/workflows/concert-demos-root-pull-request.yml
@@ -2,7 +2,7 @@ name: concert-demos-root-PR
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   push:
     branches:
       - '!master'
