--- a/.github/workflows/concert-demos-root-pull-request.yml
+++ b/.github/workflows/concert-demos-root-pull-request.yml
@@ -2,7 +2,8 @@ name: concert-demos-root-PR
 
 on:
   pull_request:
-    branches: [ master ]
+    branches:
+      - '**'
   push:
     branches:
       -  '**'
