--- a/.github/workflows/concert-demos-root-cypress-update.yml
+++ b/.github/workflows/concert-demos-root-cypress-update.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -22,7 +22,7 @@ jobs:
         run: make deps-cypress-update
 
       - name: Create pull request
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@v7-rc
         with:
           commit-message: Update cypress dependencies
           branch: update-cypress-dependencies-and-containers
