--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,10 @@ updates:
         versions: ["1.6.0-RC2", "1.6.0-RC3", "1.6.0"]
       - dependency-name: "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm"
         versions: ["1.6.0-RC2", "1.6.0-RC3", "1.6.0"]
+    groups:
+      spring:
+        patterns:
+          - "*spring*"
 
   - package-ecosystem: "npm"
     directory: "/concert-demos-gui"
