--- a/concert-demos-rest-service-webflux/src/main/resources/application.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.r2dbc.url=r2dbc:postgresql://localhost/concertsdb
 spring.r2dbc.username=postgres
 spring.r2dbc.password=admin
 spring.r2dbc.initialization-mode=always
+spring.main.web-application-type=reactive
 postgres.database=concertsdbwebflux
 concerts.server.url=http://localhost:${server.port}
