Build fail logs

--- a/.github/workflows/concert-demos-root-e2e.yml
+++ b/.github/workflows/concert-demos-root-e2e.yml
@@ -26,6 +26,11 @@ jobs:
           command: |
             make dcup-full-action
 
+      - name: Build Fail!
+        if: failure()
+        run: |
+          make docker-logs
+
       - name: Run Cypress
         run: make cypress-electron
 
@@ -47,6 +52,11 @@ jobs:
           timeout_seconds: 2400
           command: |
             make dcup-full-action
+
+      - name: Build Fail!
+        if: failure()
+        run: |
+          make docker-logs
 
       - name: Run Cypress
         run: make cypress-chrome
@@ -70,6 +80,11 @@ jobs:
           command: |
             make dcup-full-action
 
+      - name: Build Fail!
+        if: failure()
+        run: |
+          make docker-logs
+
       - name: Run Cypress
         run: make cypress-firefox
 
@@ -91,6 +106,11 @@ jobs:
           timeout_seconds: 2400
           command: |
             make dcup-full-action
+
+      - name: Build Fail!
+        if: failure()
+        run: |
+          make docker-logs
 
       - name: Run Cypress
         run: make cypress-edge
