--- a/.github/workflows/concert-demos-root-e2e.yml
+++ b/.github/workflows/concert-demos-root-e2e.yml
@@ -26,7 +26,7 @@ jobs:
           command: |
             make dcup-full-action
 
-      - name: Build Fail!
+      - name: Docker Startup Fail!
         if: failure()
         run: |
           make docker-logs
@@ -53,7 +53,7 @@ jobs:
           command: |
             make dcup-full-action
 
-      - name: Build Fail!
+      - name: Docker Startup Fail!
         if: failure()
         run: |
           make docker-logs
@@ -80,7 +80,7 @@ jobs:
           command: |
             make dcup-full-action
 
-      - name: Build Fail!
+      - name: Docker Startup Fail!
         if: failure()
         run: |
           make docker-logs
@@ -107,7 +107,7 @@ jobs:
           command: |
             make dcup-full-action
 
-      - name: Build Fail!
+      - name: Docker Startup Fail!
         if: failure()
         run: |
           make docker-logs
