Project Signing - Auto generated commit

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "maven" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "yearly"
     ignore:
       - dependency-name: "org.jetbrains.kotlinx:kotlinx-coroutines-reactor"
         versions: ["1.6.0-RC2", "1.6.0-RC3", "1.6.0"]
@@ -19,7 +19,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/concert-demos-gui"
     schedule:
-      interval: "daily"
+      interval: "yearly"
     groups:
       angular:
         patterns:
@@ -30,4 +30,4 @@ updates:
   - package-ecosystem: "npm"
     directory: "/e2e"
     schedule:
-      interval: "daily"
+      interval: "yearly"
